src/modules/base/rating/rating.css
/**
 * BSD 3-Clause License
 *
 * Copyright (c) 2021, Avonni Labs, Inc.
 * All rights reserved.
 *
 * Redistribution and use in source and binary forms, with or without
 * modification, are permitted provided that the following conditions are met:
 *
 * - Redistributions of source code must retain the above copyright notice, this
 *   list of conditions and the following disclaimer.
 *
 * - Redistributions in binary form must reproduce the above copyright notice,
 *   this list of conditions and the following disclaimer in the documentation
 *   and/or other materials provided with the distribution.
 *
 * - Neither the name of the copyright holder nor the names of its
 *   contributors may be used to endorse or promote products derived from
 *   this software without specific prior written permission.
 *
 * THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS IS"
 * AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE
 * IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE
 * DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT HOLDER OR CONTRIBUTORS BE LIABLE
 * FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL
 * DAMAGES (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR
 * SERVICES; LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER
 * CAUSED AND ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY,
 * OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE
 * OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 */

 .avonni-rating:hover .avonni-active.avonni-continuous:not(:hover) {
    border: 1px solid #1b5297;
    background-color: #ffffff;
    border-color: #1b5297;
    color: #1b5297;
    opacity: 0.85;
}

.avonni-rating:hover .avonni-active:hover {
    border: 1px solid #ffffff;
    background-color: #1b5297;
    border-color: #1b5297;
    color: #ffffff;
    opacity: 1;
}

.avonni-active.avonni-continuous:hover,
.avonni-active.avonni-continuous:hover ~ .avonni-active.avonni-continuous,
.avonni-active.avonni-continuous:hover:before,
.avonni-active.avonni-continuous:hover
    ~ .avonni-active.avonni-continuous:before {
    border: 1px solid #ffffff !important;
    background-color: #1b5297 !important;
    border-color: #1b5297 !important;
    color: #ffffff !important;
    opacity: 1 !important;
}

.avonni-rating {
    unicode-bidi: bidi-override;
    direction: rtl;
    text-align: left;
    width: fit-content;
}

button {
    direction: initial;
    margin-left: 1px !important;
}

.avonni-rating__container {
    display: flex;
    align-items: center;
}

.avonni-rating__container .avonni-rating__value {
    padding-left: 1rem;
}

.slds-form-element_stacked .slds-form-element {
    padding-left: 0.5rem;
}

.avonni-rating__label_inline {
    display: flex;
    align-items: center;
}

.avonni-rating__label_inline lightning-helptext {
    padding-right: 0.25rem;
}

.avonni-rating__label {
    color: var(--avonni-rating-header-text-color, #3e3e3c);
    font-size: var(--avonni-rating-header-font-size, 0.75rem);
    font-style: var(--avonni-rating-header-font-style, normal);
    font-weight: var(--avonni-rating-header-font-weight, 400);
}

.avonni-rating__value {
    color: var(--avonni-rating-value-text-color, #080707);
    font-size: var(--avonni-rating-value-font-size, 0.8125rem);
    font-style: var(--avonni-rating-value-font-style, normal);
    font-weight: var(--avonni-rating-value-font-weight, 400);
}

